<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollIndicators="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/height_width_100"
                android:layout_height="@dimen/height_width_100"
                android:layout_marginTop="@dimen/padding_margin_50"
                android:src="@drawable/logo512" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextFullName"
                style="@style/CommonEditTextStyle"
                android:layout_marginTop="@dimen/padding_margin_50"
                android:hint="@string/fullname"
                android:imeOptions="actionNext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextEmail"
                style="@style/CommonEditTextStyle"
                android:layout_marginTop="@dimen/padding_margin_10"
                android:hint="@string/email"
                android:imeOptions="actionNext" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextPassword"
                style="@style/CommonEditTextStyle"
                android:layout_marginTop="@dimen/padding_margin_10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textviewSignUp"
                style="@style/CommonSignupButtonStyle"
                android:layout_marginTop="@dimen/padding_margin_40"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_margin_30"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/height_width_35"
                    android:layout_marginRight="@dimen/height_width_35"
                    android:background="@color/loginlinecolor" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/view_color"
                    android:textSize="18sp" />


            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textviewSignupwithFb"
                style="@style/SignupfacebookButtonStyle"
                android:layout_marginTop="@dimen/padding_margin_15"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/signup_facebook"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textviewSignupwithGoogle"
                style="@style/SignupgoogleButtonStyle"
                android:layout_marginTop="@dimen/padding_margin_15"
                android:drawableLeft="@drawable/ic_google_icon"
                android:paddingLeft="@dimen/padding_margin_10"
                android:text="@string/signup_google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textviewTermsCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/height_width_35"
                android:layout_marginTop="@dimen/padding_margin_25"
                android:layout_marginEnd="@dimen/height_width_35"
                android:gravity="center"
                android:textSize="@dimen/text_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_margin_20"
                android:layout_marginBottom="@dimen/height_width_24"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_margin_3"
                    android:text="@string/already_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewAlreadyLogin"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#87AFDE"
                    android:textSize="@dimen/text_12" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>